=======
CHANGES
=======

1.3.1 (unreleased)
------------------

- Fixed a bug where invalid Choice values broke dumping.

1.3.0 (2012-10-05)
------------------

- Implemented dependency support among stores at the same level of object.

- Increased test coverage to over 90%.


1.2.2 (2012-08-30)
------------------

- Provide ``container`` and ``root`` attributes on IConfigurationStore
  they come handy in various load and dump situation instead of __parent__
  and getSite

1.2.1 (2012-06-05)
------------------

- Added support for zope.schema.Set fields.

- Fixed a bug where __init__ was used to empty a container.


1.2.0 (2012-04-06)
------------------

- Initial release on pypi.

1.1.1 (2012-02-27)
------------------

- Make sure that setting the parent explicitly on items created in the
  collection config store is optionally and overwritable.


1.1.0 (2012-01-29)
------------------

- Feature Added dump/load support for ``datetime.timedelta`` objects.

1.0.0
-----

- Initial release.