@@ -5,7 +5,11 @@ CHANGES
 1.3.1 (unreleased)
 ------------------
 
+- Store `None` values as `<<<###NONE###>>>` so we can load them again as `None`
+  Note: `None` values will not be passed to converters.
+
 - Fixed a bug where invalid Choice values broke dumping.
+
 
 1.3.0 (2012-10-05)
 ------------------
